# cubrid

./: AGENTS.md  CMakeLists.txt  Jenkinsfile  REVIEW_NOTES.md  build.sh  code_review_report.md
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  comment_trigger.yml  cppcheck-spr-list  tc-branch-finalize.yml  tc-branch-sync.yml  tc-merge-gate.yml
broker/: CMakeLists.txt
cm_common/: CMakeLists.txt
cmake/: CPack.STGZ_Header.sh.in
conf/: cubrid_hosts.conf
contrib/collectd-plugin/: cubrid_broker.c
contrib/scripts/: check_index_ovfps.sh  check_reserved.sql  cubrid.csh  cubrid.sh  restore_to_newdb.sh  setup.sh  unloaddb.sh
cs/: CMakeLists.txt
cubrid/: CMakeLists.txt
demo/: CMakeLists.txt  demodb_schema
include/: system.h
msg/: CMakeLists.txt
msg/de_DE.utf8/: cubrid.msg  utils.msg
msg/en_US/: cubrid.msg  utils.msg
msg/en_US.utf8/: csql.msg  cubrid.msg  utils.msg
msg/es_ES.utf8/: cubrid.msg  utils.msg
msg/fr_FR.utf8/: cubrid.msg  utils.msg
msg/it_IT.utf8/: cubrid.msg  utils.msg
msg/ja_JP.utf8/: cubrid.msg  utils.msg
msg/km_KH.utf8/: cubrid.msg  utils.msg
msg/ko_KR.euckr/: cubrid.msg  utils.msg
msg/ko_KR.utf8/: csql.msg  cubrid.msg  utils.msg
msg/ro_RO.utf8/: cubrid.msg  utils.msg
msg/tr_TR.utf8/: cubrid.msg  utils.msg
msg/vi_VN.utf8/: cubrid.msg  utils.msg
msg/zh_CN.utf8/: cubrid.msg  utils.msg
pl_engine/: AGENTS.md  CMakeLists.txt  gradlew.bat
pl_engine/cmake/: copy_submodule_jdbc.cmake  install_jdk.cmake
pl_engine/pl_server/: build.gradle.kts
pl_engine/pl_server/src/main/antlr/: PlcLexer.g4  PlcParser.g4
pl_engine/pl_server/src/main/java/com/cubrid/jsp/: ExecuteThread.java  ListenerThread.java  LoggingThread.java  Server.java  ServerConfig.java  SpSecurityManager.java  StoredProcedure.java  SysParam.java  TargetMethod.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/classloader/: SessionClassLoaderGroup.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/compiler/: MemoryJavaCompiler.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/context/: Context.java  ContextManager.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/data/: CUBRIDUnpacker.java  CompileInfo.java  Dependency.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/impl/: SUConnection.java  SUFunctionCode.java  SUStatement.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/jdbc/: CUBRIDServerSideConnection.java  CUBRIDServerSideDriver.java  CUBRIDServerSideJDBCErrorCode.java  CUBRIDServerSidePreparedStatement.java  CUBRIDServerSideStatement.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/protocol/: Header.java  RequestCode.java  SqlSemanticsRequest.java  UnPackableObject.java
pl_engine/pl_server/src/main/java/com/cubrid/jsp/value/: NumericValue.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/builtin/: DBMS_OUTPUT.java  MessageBuffer.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/: DBTypeAdapter.java  ParseTreeConverter.java  PlcsqlCompilerMain.java  SymbolStack.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/ast/: AstNode.java  BuiltinFuncCall.java  DeclFunc.java  DeclProc.java  DeclRoutine.java  ExprBuiltinFuncCall.java  ExprDate.java  ExprDatetime.java  ExprFloat.java  ExprGlobalFuncCall.java  ExprLocalFuncCall.java  ExprNull.java  ExprSerialVal.java  ExprStr.java  ExprSyntaxedCallAdddate.java  ExprSyntaxedCallCast.java  ExprSyntaxedCallChr.java  ExprSyntaxedCallExtract.java  ExprSyntaxedCallPosition.java  ExprSyntaxedCallSubdate.java  ExprSyntaxedCallTrim.java  ExprTime.java  ExprTimestamp.java  ExprUint.java  SqlLiteral.java  StmtBasicLoop.java  StmtExecImme.java  StmtForCursorLoop.java  StmtForIterLoop.java  StmtForSqlLoop.java  StmtForStaticSqlLoop.java  StmtGlobalProcCall.java  StmtLocalProcCall.java  StmtLoop.java  StmtSql.java  StmtStaticSql.java  StmtWhileLoop.java  Unit.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/ast/loopOpt/: LocalRoutineCall.java  LoopOptimizable.java  SqlUse.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/serverapi/: ServerConstants.java  SqlSemantics.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/type/: Type.java  TypeChar.java  TypeNumeric.java  TypeRecord.java  TypeVarchar.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/compiler/visitor/: AstVisitor.java  JavaCodeWriter.java  TypeChecker.java
pl_engine/pl_server/src/main/java/com/cubrid/plcsql/predefined/sp/: SpLib.java
pl_engine/pl_server/src/main/resources/: logging.properties
pr13/: csql_result.c  execute_statement.h  heap_file.c  histogram_reader.cpp  parse_tree.h  scan_manager.c  schema_system_catalog_constants.h
sa/: CMakeLists.txt
src/: AGENTS.md
src/api/: cubrid_log.c  db_stub.c
src/base/: AGENTS.md  DMRB.hpp  DMRBMemoryPool.cpp  DMRBMemoryPool.hpp  adjustable_array.c  adjustable_array.h  area_alloc.c  base64.c  binaryheap.c  cgroup.cpp  cgroup.hpp  chartype.h  compressor.hpp  condition_handler.c  condition_handler.h  condition_handler_code.h  count_registry.hpp  databases_file.c  databases_file.h  ddl_log.c  dtoa.c  dynamic_load.c  environment_variable.c  environment_variable.h  epoll.cpp  epoll.hpp  error_code.h  error_manager.c  error_manager.h  event_log.c  fault_injection.c  fault_injection.h  filesys_parser.cpp  filesys_parser.hpp  fixed_size_allocator.hpp  hardware_topology.cpp  hardware_topology.hpp  ifsys.cpp  ifsys.hpp  ini_parser.c  (+51 more)
src/broker/: AGENTS.md  broker.c  broker_acl.c  broker_admin.c  broker_admin_pub.c  broker_admin_pub.h  broker_admin_so.c  broker_cas_cci.h  broker_changer.c  broker_config.c  broker_config.h  broker_env_def.h  broker_filename.c  broker_filename.h  broker_log_converter.c  broker_log_replay.c  broker_log_top.c  broker_log_top.h  broker_log_top_tran.c  broker_log_util.c  broker_monitor.c  broker_process_size.c  broker_shm.c  broker_shm.h  broker_tester.c  cas.c  cas.h  cas_cgw.c  cas_cgw.h  cas_cgw_execute.c  cas_cgw_odbc.c  (+51 more)
unit_tests/: AGENTS.md  CMakeLists.txt
util/: CMakeLists.txt
win/: build.bat
(+663 files in other folders)
